# golang-dependency-parser

./: .gitignore  pyproject.toml
parser/: layers.py  main.py  package.py  report.py  utils.py
parser/io/: golang.py  python.py  reader.py
parser/reports/: files.py
scripts/: create-final-report.sh  python-repo-cloner.sh  repo-cloner.sh
